<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="enter_your_name">Enter Your Name:</string>
    <string name="reservation">Reservation</string>
    <string name="name">Name</string>
    <string name="enter_mobile_number">Enter Mobile Number:</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_number_of_people_include_yourself">Enter number of people (include yourself):</string>
    <string name="number_of_pax">Number of Pax</string>
    <string name="which_area_do_you_prefer">Which Area do you prefer?</string>
    <string name="smoking_area">Smoking Area</string>
    <string name="non_smoking_area">Non Smoking Area</string>
    <string name="reservation_date">Reservation Date:</string>
    <string name="reservation_time">Reservation Time:</string>
    <string name="confirm_reservation">Confirm reservation</string>
    <string name="reset">reset</string>
</resources>